# cw-template

./: Cargo.toml  Makefile.toml  README.md
contracts/template/: Cargo.toml
contracts/template/src/: contract.rs
